--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.11"
 dependencies = []
 
 [project.scripts]
-struct-gen = "struct_gen.struct:main"
+struct-gen = "struct_gen.struc:main"
 
 [build-system]
 requires = ["uv_build>=0.9.15,<0.10.0"]
